<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VTask</string>
    <string name="user_name">Nguyen Ba Hung</string>
    <string name="gmail_user_nav">hungpronguyen256@gmail.com</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="info_user">Thông tin tài khoản</string>
    <string name="subject">Chủ đề/Dự án</string>
    <string name="member">Thành viên</string>
    <string name="notify_id">Thông báo</string>
    <string name="setting_app">Cài đặt phần mềm</string>
    <string name="waiting">Đang chờ duyệt</string>
    <string name="join">Đã tham gia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
